<resources>
    <!-- Texts para activity_main.xml -->
    <string name="app_name">Circuit Trainer</string>
    <string name="ready_to_start">Pronto para começar?</string>
    <string name="default_time">00:00</string>
    <string name="start_workout">Iniciar Treino</string>
    <string name="add_exercise">Adicionar Exercício</string>
    <string name="exercises_list_description">Lista de exercícios do treino</string>
    <string name="exercise_name_hint">Nome do Exercício</string>
    <string name="exercise_duration_hint">Duração (segundos)</string>
    <string name="save_button_text">Salvar</string>
</resources>